--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "5.1.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "socket.io": "^4.5.0",
+    "socket.io": "4.5.0",
     "multer": "^1.4.5-lts",
+    "socket.io": "^4.8.1",
     "stripe": "^14.0.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "5.1.0",
     "crypto": "^1.0.1",
-    "morgan": "^1.11.1",  // ✅ Updated to latest available version
+    "morgan": "^1.11.0",
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
     "uuid": "^9.0.0"
@@ -27,7 +31,13 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["music", "beats", "collaboration", "payments", "finisher"],
+  "keywords": [
+    "music",
+    "beats",
+    "collaboration",
+    "payments",
+    "finisher"
+  ],
   "author": "Demond Balentine",
   "license": "MIT"
 }
