--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon server/server.js",
     "lint": "eslint server/ public/js/",
     "lint:fix": "eslint server/ public/js/ --fix",
-    "test": "jest --coverage --coverageThreshold='{\"global\":{\"branches\":70,\"functions\":70,\"lines\":70,\"statements\":70}}'",
-      "test": "jest --coverage",
+    "test": "jest --coverage",
     "test:watch": "jest --watch",
     "test:unit": "jest tests/unit",
     "test:integration": "jest tests/integration",
@@ -33,7 +32,7 @@
   "license": "PROPRIETARY",
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -57,11 +56,13 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "eslint-config-standard": "^15.0.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.6.0",
+    "globals": "^17.2.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.4"
